--- a/EcoCareApp/EcoCareApp/Views/BarcodePopUp.xaml
+++ b/EcoCareApp/EcoCareApp/Views/BarcodePopUp.xaml
@@ -1,45 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<pages:PopupPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="EcoCareApp.Views.BarcodePopUp"
-             xmlns:sfPopup="clr-namespace:Syncfusion.XForms.PopupLayout;assembly=Syncfusion.SfPopupLayout.XForms">
-    
-    <ContentPage.Content>
+            xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
+                 
+             xmlns:barcode="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
+             xmlns:common="clr-namespace:ZXing.Common;assembly=zxing.portable" xmlns:viewmodels="clr-namespace:EcoCareApp.ViewModels" x:DataType="viewmodels:ProductPageViewModel">
+    <StackLayout>
+        
 
-        <sfPopup:SfPopupLayout x:Name="xxx">
-            <sfPopup:PopupView  AppearanceMode="OneButton" ShowCloseButton="True">
-                <sfPopup:PopupView.HeaderTemplate>
-                    <DataTemplate>
-                        <Label Text="Customized Header" 
+                    <Label Text="Customized Header" 
                                FontAttributes="Bold"
                                BackgroundColor="Blue"
                                FontSize="16"
                                HorizontalTextAlignment="Center"
                                VerticalTextAlignment="Center"
                                />
-                    </DataTemplate>
-                </sfPopup:PopupView.HeaderTemplate>
-                <sfPopup:PopupView.FooterTemplate>
-                    <DataTemplate>
-                        <Label Text="Customized Footer" 
+
+        <barcode:ZXingBarcodeImageView BarcodeValue="{Binding BarcodeValue}" HeightRequest="500"
+                                                       WidthRequest="500">
+            <barcode:ZXingBarcodeImageView.BarcodeOptions>
+                <common:EncodingOptions Height="500" Width="500"/>
+            </barcode:ZXingBarcodeImageView.BarcodeOptions>
+        </barcode:ZXingBarcodeImageView>
+        <Label Text="Customized Footer" 
                                FontAttributes="Bold"
                                BackgroundColor="Blue"
                                FontSize="16"
                                HorizontalTextAlignment="Center"
                                VerticalTextAlignment="Center"
                                />
-                    </DataTemplate>
-                </sfPopup:PopupView.FooterTemplate>
-                <sfPopup:PopupView.ContentTemplate>
-                    <DataTemplate>
-                        <Label Text="This sould be barcode" BackgroundColor="SkyBlue"
-                           HorizontalTextAlignment="Center"/>
-                    </DataTemplate>
-                </sfPopup:PopupView.ContentTemplate>
-            </sfPopup:PopupView>
-            
-        </sfPopup:SfPopupLayout>
+    </StackLayout>
 
 
-    </ContentPage.Content>
-</ContentPage>
+</pages:PopupPage>
