--- a/EcoCareApp/EcoCareApp/Views/ProductPage.xaml
+++ b/EcoCareApp/EcoCareApp/Views/ProductPage.xaml
@@ -2,11 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="EcoCareApp.Views.ProductPage" Padding="0,40,0,0"
+             xmlns:barcode="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
+             xmlns:common="clr-namespace:ZXing.Common;assembly=zxing.portable"
              xmlns:sfPopup="clr-namespace:Syncfusion.XForms.PopupLayout;assembly=Syncfusion.SfPopupLayout.XForms" xmlns:viewmodels="clr-namespace:EcoCareApp.ViewModels" x:DataType="viewmodels:ProductPageViewModel">
 
-    <sfPopup:SfPopupLayout x:Name="barcodePopup">
         
-        <sfPopup:SfPopupLayout.Content>
             <StackLayout x:Name="mainLayout">
 
                 <ScrollView>
@@ -20,7 +20,7 @@
 
                         <Button x:Name="showBarode" Text="Get Barcode for the benefit!"
                                     VerticalOptions="Start" HorizontalOptions="FillAndExpand"
-                                Clicked="showBarode_Clicked"
+                                 Command="{Binding ToBarcodePopUp}"
                                 />
                     </StackLayout>
 
@@ -28,41 +28,5 @@
 
 
             </StackLayout>
-        </sfPopup:SfPopupLayout.Content>
-
-
-        <sfPopup:PopupView AppearanceMode="OneButton" ShowCloseButton="True" x:Name="PopUpItself">
-            <sfPopup:PopupView.HeaderTemplate>
-                <DataTemplate>
-                    <Label Text="Customized Header" 
-                               FontAttributes="Bold"
-                               BackgroundColor="Blue"
-                               FontSize="16"
-                               HorizontalTextAlignment="Center"
-                               VerticalTextAlignment="Center"
-                               />
-                </DataTemplate>
-            </sfPopup:PopupView.HeaderTemplate>
-            <sfPopup:PopupView.FooterTemplate>
-                <DataTemplate>
-                    <Label Text="Customized Footer" 
-                               FontAttributes="Bold"
-                               BackgroundColor="Blue"
-                               FontSize="16"
-                               HorizontalTextAlignment="Center"
-                               VerticalTextAlignment="Center"
-                               />
-                </DataTemplate>
-            </sfPopup:PopupView.FooterTemplate>
-            <sfPopup:PopupView.ContentTemplate>
-                <DataTemplate>
-                    <Label Text="This sould be barcode" BackgroundColor="SkyBlue"
-                           HorizontalTextAlignment="Center"/>
-                </DataTemplate>
-            </sfPopup:PopupView.ContentTemplate>
-        </sfPopup:PopupView>
-
-    </sfPopup:SfPopupLayout>
-
-
+       
 </ContentPage>
