--- a/EcoCareApp/EcoCareApp/Views/BarcodePopUp.xaml
+++ b/EcoCareApp/EcoCareApp/Views/BarcodePopUp.xaml
@@ -7,29 +7,32 @@
              xmlns:barcode="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
              xmlns:common="clr-namespace:ZXing.Common;assembly=zxing.portable" xmlns:viewmodels="clr-namespace:EcoCareApp.ViewModels" x:DataType="viewmodels:ProductPageViewModel">
     <StackLayout>
-        
 
-                    <Label Text="Customized Header" 
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="20*"/>
+                <RowDefinition Height="2*" />
+            </Grid.RowDefinitions>
+            <Label Text="Customized Header" 
                                FontAttributes="Bold"
                                BackgroundColor="Blue"
                                FontSize="16"
                                HorizontalTextAlignment="Center"
                                VerticalTextAlignment="Center"
+                   Grid.Row="0"
                                />
 
-        <barcode:ZXingBarcodeImageView BarcodeValue="{Binding BarcodeValue}" HeightRequest="500"
-                                                       WidthRequest="500">
-            <barcode:ZXingBarcodeImageView.BarcodeOptions>
-                <common:EncodingOptions Height="500" Width="500"/>
-            </barcode:ZXingBarcodeImageView.BarcodeOptions>
-        </barcode:ZXingBarcodeImageView>
-        <Label Text="Customized Footer" 
-                               FontAttributes="Bold"
-                               BackgroundColor="Blue"
-                               FontSize="16"
-                               HorizontalTextAlignment="Center"
-                               VerticalTextAlignment="Center"
-                               />
+                <barcode:ZXingBarcodeImageView BarcodeValue="{Binding BarcodeValue}" Grid.Row="1" WidthRequest="500"
+                                               HeightRequest="500">
+
+                    <barcode:ZXingBarcodeImageView.BarcodeOptions>
+                        <common:EncodingOptions Height="500" Width="500"/>
+                    </barcode:ZXingBarcodeImageView.BarcodeOptions>
+
+                </barcode:ZXingBarcodeImageView>
+            <Button Text="Close" Command="{Binding PopUpClosed}" Grid.Row="2"/>
+        </Grid>
     </StackLayout>
 
 
