--- a/EcoCareApp/EcoCareApp/Views/UserProfile.xaml
+++ b/EcoCareApp/EcoCareApp/Views/UserProfile.xaml
@@ -19,9 +19,9 @@
     mc:Ignorable="d">
     <ContentView.Content>
             <ScrollView>
-                <Grid RowDefinitions="Auto, *, 0.5*">
-
-                    <Grid Grid.Row="0"
+                <Grid RowDefinitions="0.5*,Auto, *, 0.5*">
+                <Button Grid.Row="0" Text="Log Out" HorizontalOptions="End" Style="{StaticResource Button}" Command="{Binding LogOut}" />
+                <Grid Grid.Row="1"
                     HeightRequest="260"
                     RowDefinitions="Auto, Auto, *"
                     RowSpacing="0">
@@ -56,7 +56,7 @@
 
                         <!--  Profile Name  -->
                         <Label
-                        Grid.Row="1"
+                        Grid.Row="2"
                         Margin="0,0,0,2"
                         FontSize="20"
                         Style="{StaticResource TitleLabelStyle}"
@@ -65,7 +65,7 @@
 
                         <!--  Stars  -->
                     <Label
-                        Grid.Row="2"
+                        Grid.Row="3"
                         FontSize="12"
                         Style="{StaticResource DescriptionLabelStyle}"
                         TextColor="{DynamicResource Gray-White}" Text="{Binding Stars, StringFormat='You have {0:F0} stars'}"/>
